update register new user openapi docs
